--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,5 @@
 exportClasses(Complist, Parameters, PepID, QC)
-exportMethods(evalID, plotFragment, setOutlier, getChrom, setFolder, outlier, modelPCA, modelCaret, predictCaret, plotScore, plotStat, editSampleinfo, sampleInfo, sampleNames, filterAnova, filterNZV, filterCor, plotCont, plotEval, getCont, plotData, plotChromatogram, plotRetcor, mergePepID, plotDendro, findOutlier, getFeature, plotHeat, getRaw, getPeplist, getMatch, getPeakinfo, getRawID, editPar, getBestmatch, reAnnotate, reFindPeaks, reGroup, reRTcorrect, reMatch, getMSnScan, saveQC, plotQC, getStatQC, modelQC, plotMDS, groupReport, pcaReport, peakReport, intensityReport, coverageReport, chromReport, sampleReport, plotSample, plotCoverage)
+exportMethods(evalID, plotFragment, setOutlier, getChrom, setFolder, outlier, modelPCA, modelCaret, predictCaret, plotScore, plotStat, editSampleinfo, sampleInfo, sampleNames, filterAnova, filterNZV, filterCor, plotCont, plotEval, getCont, plotData, plotChromatogram, plotRetcor, mergePepID, plotDendro, findOutlier, getFeature, plotHeat, getRaw, getPeplist, getMatch, getPeakinfo, getRawID, editPar, getBestmatch, reAnnotate, reFindPeaks, reGroup, reRTcorrect, reMatch, reSetFDR, getMSnScan, saveQC, plotQC, getStatQC, modelQC, plotMDS, groupReport, pcaReport, peakReport, intensityReport, coverageReport, chromReport, sampleReport, mixReport, plotSample, plotCoverage, plotDetection)
 export(updateComplist)
 export(complist)
 export(testPar)
@@ -36,7 +36,7 @@ import(reshape2)
 import(plyr)
 import(xcms)
 exportMethods(plotEIC)
-import(pcaMethods)
+importFrom('pcaMethods', pca)
 import(ggdendro)
 import(OutlierD)
 import(pcaPP)
