--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pepmaps
 Type: Package
 Title: Create peptide maps by merging xcms (and CAMERA) with MassAI
-Version: 1.7-1
+Version: 1.7-3
 Date: 2011-10-04
 Author: Thomas Dybdal Pedersen
 Maintainer: Thomas Dybdal Pedersen <thomasp85@gmail.com>
@@ -10,4 +10,4 @@ License: GPL (>= 2)
 LazyLoad: yes
 Depends: methods, Rcpp, rJava, xlsx
 Imports: ggplot2, grid, gridExtra, reshape2, plyr, xcms, CAMERA, ggdendro, MSnbase, OutlierD, pcaPP, RColorBrewer, Biostrings, caret, pcaMethods
-Collate: zzz.R generics.R low_level.R PepID.R Parameters.R Complist.R wrapper.R xcms.R QC.R pepCalc.R
+Collate: zzz.R generics.R low_level.R PepID.R Parameters.R Complist.R wrapper.R xcms.R QC.R pepCalc.R blast.pdb.R
